--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PROJETO PWEB I</title>
+  <title>HOME</title>
 </head>
+
 <body>
-  <header class="cabecalho">
+  <header class="cabecalho" style="font-size: 25px;">
     <nav class="menu-cabecalho">
       <a href="index.html">HOME</a>
-      <a href="">ENTRAR</a>
-      <a href="">CADASTRAR</a>
+      <a href="login.html">ENTRAR</a>
+      <a href="cadastro.html">CADASTRAR</a>
     </nav>
   </header>
   <main class="conteudo-principal">
-    <h1 class="conteudo-principal-h1">SOBRE NÓS</h1>
-    <p class="conteudo-principal-h1-p1">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla numquam eius, deserunt cumque sint minima molestias illo corporis, ullam officiis sequi quod asperiores quas suscipit delectus quia esse deleniti non. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla neque tenetur cupiditate itaque dolore quis magnam consectetur facere exercitationem, distinctio totam sunt fuga doloremque placeat doloribus iure excepturi optio possimus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit eaque molestiae quisquam ducimus est architecto quae placeat quos obcaecati illum nemo nesciunt sunt maxime facere veniam harum, nisi iste ab?
+    <h1 class="conteudo-principal-h1" style="font-size: 25px;">SOBRE NÓS</h1>
+    <p class="conteudo-principal-h1-p1" style="font-size: 16px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+      A XYZ Recrutamento é uma empresa especializada em recrutar programadores front-end, back-end e full-stack.<br>
+      Conectamos talentos qualificados a oportunidades empolgantes no desenvolvimento de software.<br><br>Trabalhamos
+      com empresas de todos os tamanhos, desde startups até grandes corporações, para encontrar candidatos ideais que se
+      encaixem em suas equipes e projetos.<br> Oferecemos um processo de recrutamento personalizado, suporte durante todo o
+      processo de entrevistas e negociação, e valorizamos a excelência e a ética em todas as
+      interações.<br><br>Contate-nos hoje mesmo para obter os melhores programadores ou encontrar oportunidades
+      emocionantes.
     </p>
   </main>
   <main class="conteudo-principal2">
-    <h1 class="conteudo-principal2-h1">PARCEIROS</h1>
+    <h1 class="conteudo-principal2-h1" style="font-size: 25px;">PARCEIROS</h1>
     <nav class="conteudo-principal2-parceiros">
-      <a href="">parceiro1</a>
-      <a href="">pparceiro2</a>
-      <a href="">parceiro2</a>
-      <p class="conteudo-principal2-parceiros-p">Se interessou? Torne-se um parceiro basta clicar no link: <a href="">clique aqui[redirecionar para conteudo de PARCEIRIA]</a></p>
+      <a href="">parceiro1(colocar imagem)</a>
+      <a href="">parceiro2(colocar imagem)</a>
+      <a href="">parceiro3(colocar imagem)</a>
+      <p class="conteudo-principal2-parceiros-p" style="font-size: 15px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Se interessou? Torne-se um parceiro basta
+        clicar no link: <a href="">clique aqui[redirecionar para conteudo de PARCEIRIA]</a></p>
     </nav>
   </main>
   <footer class="rodape">
@@ -35,4 +44,5 @@
     </nav>
   </footer>
 </body>
+
 </html>
