--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <title>HOME</title>
 </head>
 
-<body>
+<body style="text-align: center;">
   <header class="cabecalho" style="font-size: 25px;">
     <nav class="menu-cabecalho">
-      <a href="index.html">HOME</a>
       <a href="login.html">ENTRAR</a>
       <a href="cadastro.html">CADASTRAR</a>
     </nav>
