--- a/login.html
+++ b/login.html
@@ -7,18 +7,18 @@
   <title>LOGIN</title>
 </head>
 
-<body>
-  <h2 id="cadastro">ENTRAR</h2>
-  <form>
-    <label for="cadastroNome">Usuário:</label>
-    <input type="text" id="cadastroNome" name="cadastroNome" required><br><br>
+<body style="text-align: center;">
+  <h2 id="cadastro" style="font-size: 30px;">ENTRAR</h2>
+  <form style="font-size: 20px;">
+    <label for="cadastroUsuario">Usuário:</label>
+    <input type="text" id="cadastroUsuario" user="cadastroUsuario" required style="border-radius: 20px;"><br><br>
 
     <label for="cadastroSenha">Senha:</label>
-    <input type="password" id="cadastroSenha" name="cadastroSenha" required><br><br>
+    <input type="password" id="cadastroSenha" name="cadastroSenha" required style="border-radius: 20px;"><br><br>
 
-    <input type="submit" value="ENTRAR">
+    <input type="submit" value="ENTRAR" style="font-size: 18px;">
   </form><br>
-  <a href="index.html">Voltar para página inicial</a>
+  <a href="index.html" style="font-size: 15px;">Voltar para página inicial</a>
 </body>
 
 </html>
