--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel = "stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HOME</title>
 </head>
@@ -10,8 +11,8 @@
 <body style="text-align: center;">
   <header class="cabecalho" style="font-size: 25px;">
     <nav class="menu-cabecalho">
-      <a href="login.html">ENTRAR</a>
-      <a href="cadastro.html">CADASTRAR</a>
+      <a class="link-cabecalho" href="login.html">ENTRAR</a>
+      <a class="link-cabecalho" href="cadastro.html">CADASTRAR</a>
     </nav>
   </header>
   <main class="conteudo-principal">
@@ -19,8 +20,8 @@
     <p class="conteudo-principal-h1-p1" style="font-size: 16px; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
       A XYZ Recrutamento é uma empresa especializada em recrutar programadores front-end, back-end e full-stack.<br>
       Conectamos talentos qualificados a oportunidades empolgantes no desenvolvimento de software.<br><br>Trabalhamos
-      com empresas de todos os tamanhos, desde startups até grandes corporações, para encontrar candidatos ideais que se
-      encaixem em suas equipes e projetos.<br> Oferecemos um processo de recrutamento personalizado, suporte durante todo o
+      com empresas de todos os tamanhos, desde startups até grandes corporações,<br> para encontrar candidatos ideais que se
+      encaixem em suas equipes e projetos.<br> Oferecemos um processo de recrutamento personalizado,<br> suporte durante todo o
       processo de entrevistas e negociação, e valorizamos a excelência e a ética em todas as
       interações.<br><br>Contate-nos hoje mesmo para obter os melhores programadores ou encontrar oportunidades
       emocionantes.
