correção de bugs

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     </nav>
   </main>
   <footer class="rodape">
-    <nav class="menu-rodape">
-      <a href="">PARCEIRIA</a>
-      <a href="">CONTATO</a>
-    </nav>
+    <div class="menu-rodape">
+      <a class="link-rodape" href="">PARCEIRIA</a>
+      <a class="link-rodape" href="">CONTATO</a>
+    </div>
   </footer>
 </body>
-
+ 
 </html>
